# PhoenixGeoPy

./: Code_Of_Conduct.md  License.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
Examples/: DecimatedContinuousReader.py  DecimatedSegmentedReader.py  NativeSampleReader.py
PhoenixGeoPy/: __init__.py
PhoenixGeoPy/Reader/: DataScaling.py  TimeSeries.py  __init__.py
Sample Data/10128_2021-04-27-025909/: config.json  kern.pri  recmeta.json.bak  stats
Sample Data/10128_2021-04-27-032436/: config.json  kern.pri  recmeta.json  stats
Sample Data/10128_2021-04-27-032436/0/: 10128_608783F4_0_00000001.td_150  10128_608783F4_0_00000001.td_24k  10128_608783F4_0_00000002.td_150  10128_608783F4_0_00000002.td_24k
Sample Data/10128_2021-04-27-032436/1/: 10128_608783F4_1_00000001.td_150  10128_608783F4_1_00000001.td_24k  10128_608783F4_1_00000002.td_150  10128_608783F4_1_00000002.td_24k
Sample Data/10128_2021-04-27-032436/2/: 10128_608783F4_2_00000001.td_150  10128_608783F4_2_00000001.td_24k  10128_608783F4_2_00000002.td_150  10128_608783F4_2_00000002.td_24k
Sample Data/10128_2021-04-27-032436/4/: 10128_608783F4_4_00000001.td_150  10128_608783F4_4_00000001.td_24k  10128_608783F4_4_00000002.td_150  10128_608783F4_4_00000002.td_24k
